# qudost

./: I98[AI98[AI98[AI98[A  I98[AI98[AI98[AI98[A.pub  README.md  pyproject.toml
base/: arch.py  density.py
data/: data_utils.py
overfitting/: generic_overfitting.py  mnist_overfitting.py  overfitting.py
qudost/: __init__.py
qudost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qudost/base/: __init__.py  arch.py  data_utils.py
qudost/data/: __init__.py  data_utils.py  download_MNIST.py  label_flipping.py
qudost/density/: __init__.py  batch_data.py  density.py  fast_density.py  fit_density.py
qudost/multitask/: __init__.py  classification.py  convolve.py  custompatch.py  fixed_feature.py  plotMnist.py  randomproj.py
qudost/overfitting/: __init__.py  generic_overfitting.py  mnist_overfitting.py  overfitting.py
qudost/random/: __init__.py  density_projection.py  featurization.py  projection.py
qudost/trajectory/: lines.py
scripts/density_est/: fat_tail.py  metrics.py  run_density_fit.py  wasserstein_time.py
scripts/sandbox/: MNIST_mosaiks.py  classification.py  convolve.py  cpdf.py  feature_histos.py  featurization.py  fixed_feature.py  mnist_classification.py  mnist_featurization.py  mnist_overfitting.py  plot-distroshift.py  plotMnist.py  wasserstein-correlation.py
